--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@
 <div id="wrap">
   <a href="#">Click here</a>   
 </div>
+<div class="footer"><p>Created by <a href="https://www.rembertdesigns.co/" target="_blank">Richard Rembert</a></p>
+</div>
